--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.camel.springboot</groupId>
+		    <artifactId>camel-spring-boot-starter</artifactId>
+		    <version>3.14.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
